StreamPractice and CandidateValidator changed